--- a/src/client/pages/EventPage/containers/Header/style.scss
+++ b/src/client/pages/EventPage/containers/Header/style.scss
@@ -84,7 +84,7 @@
     font-size: 15px;
     font-weight: 300;
     margin: 0;
-    width: 70px;
+    max-width: 70px;
     word-wrap: none;
     text-overflow: ellipsis;
 }
