--- a/src/client/style.scss
+++ b/src/client/style.scss
@@ -33,24 +33,9 @@ body {
 
 
 
-.color0{
-	background-color: rgb(255, 241, 244);
+.colorNickname{
+	color: rgb(59, 126, 194);
 }
-.color1{
-	background-color: rgb(252, 182, 199);
-}
-.color2{
-	background-color: rgb(250, 124, 157);
-}
-.color3{
-	background-color: rgb(237, 33, 100);
-}
-.color4{
-	background-color: rgb(215, 0, 97);
-}
-.color5{
-	background-color: rgb(179, 0, 113);
-}
-.color6{
-	background-color: rgb(135, 0, 110);
+.colorTime{
+	color: rgb(92, 92, 92);
 }
