--- a/src/client/pages/UserPage/containers/Layout/style.scss
+++ b/src/client/pages/UserPage/containers/Layout/style.scss
@@ -28,7 +28,7 @@
     width: auto;
     padding: 0 14px;
     span{
-        color: black;
+        color: rgb(204, 204, 204);
         font-size: 16px;
         font-weight: 500;
     }
@@ -39,6 +39,9 @@
 .uLayoutNavBarButtonActive{
     outline: none;
     border-bottom: 2px solid rgba(0, 0, 0, 0.514) !important;
+    span{
+        color: black
+    }
 }
 
 .uLayoutFlex{
