--- a/src/client/pages/UserPage/containers/Header/style.scss
+++ b/src/client/pages/UserPage/containers/Header/style.scss
@@ -60,6 +60,7 @@
     display: -webkit-flex;
     justify-content: flex-start;
     p {
+        margin: 0;
         font-size: 14px;
         line-height: 16px;
         white-space: pre-wrap;
