--- a/src/client/pages/EventPage/containers/Header/style.scss
+++ b/src/client/pages/EventPage/containers/Header/style.scss
@@ -4,7 +4,7 @@
     grid-column: 1 / 2;
     grid-row: 1 / 2;
     grid-template-columns: 100%;
-    grid-template-rows: auto auto;
+    grid-template-rows: auto auto auto;
     padding: 80px 5px 0 5px;
 }
 .eMainTitleGrid {
@@ -19,7 +19,8 @@
 .eMainTitleValue {
     font-weight: 550;
     margin: 0;
-    padding: 0 15px 0 20px;
+    padding: 0 5px 0 10px;
+    overflow: hidden;
 }
 .eMainGrid {
     display: -ms-grid;
@@ -84,11 +85,48 @@
     font-size: 15px;
     font-weight: 300;
     margin: 0;
-    max-width: 70px;
-    word-wrap: none;
+    overflow: hidden;
+    text-align: center;
     text-overflow: ellipsis;
+    width: 125px;
+    word-wrap: none;
 }
 
+.eHeaderButtonsGrid{
+    margin: 30px 0 0 0;
+    align-items: center;
+    display: -webkit-flex;
+    display: flex;
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+    height: auto;
+    justify-content: center;
+    width: auto;
+}
+.eHeaderButton{
+    align-items: center;
+    background-color: rgb(91, 136, 189);
+    border-radius: 40px;
+    cursor: pointer;
+    display: -webkit-flex;
+    display: flex;
+    height: 35px;
+    justify-content: center;
+    margin: 0 10px;
+    outline: none;
+    width: 95px;
+    span{
+        color: white;
+        font-size: 15px;
+        font-weight: 500;
+    }
+    
+}
+@media(min-width: 0px){
+    .eMainValues {
+        width: 120px;
+    }
+}
 @media(min-width: 400px){
     .eMain {
         padding: 100px 5px 0 5px;
@@ -104,6 +142,17 @@
     }
     .eMainValues {
         font-size: 19px;
+        line-height: 23px;
+        width: 200px;
+    }
+    .eHeaderButton{
+        border-radius: 40px;
+        height: 40px;
+        width: 110px;
+        span{
+            font-size: 16px;
+        }
+        
     }
 }
 @media(min-width: 992px){
