--- a/src/client/pages/EventPage/style.scss
+++ b/src/client/pages/EventPage/style.scss
@@ -109,7 +109,8 @@
             transition: 0.2s transform ease-in-out, 0.2s -webkit-transform ease-in-out;
             will-change: transform;
             z-index: 0;
-            cursor: pointer;      
+            cursor: pointer;     
+            outline: none; 
         }
         
 
