--- a/src/client/pages/EventPage/containers/Description/style.scss
+++ b/src/client/pages/EventPage/containers/Description/style.scss
@@ -8,7 +8,6 @@
     margin: 0 auto 15px auto;
 }
 .eDescriptionTextFlex {
-    width: 100%;
     min-height: 100px;
     height: auto;
     grid-column: 1 / 2;
@@ -18,23 +17,18 @@
     white-space: pre-wrap;
     cursor: default;
     margin: 0;
+    padding: 0 5%;
 }
 .eDescriptionTextValueLess {
-    padding: 0 5% 0 7%;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
     max-height: 98px;
-    white-space: pre-wrap;
     a:hover{
         text-decoration: underline;
     }
 }
 .eDescriptionTextValueMore {
-    padding: 0 5% 0 7%;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
     height: auto;
     a:hover{
         text-decoration: underline;
