--- a/src/client/pages/UserPage/containers/Layout/style.scss
+++ b/src/client/pages/UserPage/containers/Layout/style.scss
@@ -117,7 +117,7 @@
     a {
         margin: 0;
         font-weight: 550;
-        color: rgb(59, 126, 194);
+        color: rgba(0, 0, 0, 0.7);
     }
 }
 .uLayoutEventsMediaArticleHeaderRigth{
