--- a/src/client/pages/EventPage/containers/Chats/style.scss
+++ b/src/client/pages/EventPage/containers/Chats/style.scss
@@ -5,6 +5,7 @@
     display: -ms-grid;
     grid-template-columns: 100%;
     grid-template-rows: auto auto;
+    margin: 8px auto;
 }
 .eChatsTitleFlex{
     grid-column: 1 / 2;
