--- a/src/client/pages/EventPage/containers/Description/style.scss
+++ b/src/client/pages/EventPage/containers/Description/style.scss
@@ -5,7 +5,7 @@
     display: -ms-grid;
     grid-template-columns: 100%;
     grid-template-rows: auto auto;
-    margin: 0 auto 15px auto;
+    margin: 8px auto;
 }
 .eDescriptionTextFlex {
     min-height: 100px;
@@ -17,7 +17,7 @@
     white-space: pre-wrap;
     cursor: default;
     margin: 0;
-    padding: 0 5%;
+    padding: 0 5% 0 7%;
 }
 .eDescriptionTextValueLess {
     overflow: hidden;
