--- a/src/client/pages/EventPage/containers/Location/style.scss
+++ b/src/client/pages/EventPage/containers/Location/style.scss
@@ -5,6 +5,7 @@
     display: -ms-grid;
     grid-template-columns: 100%;
     grid-template-rows: auto auto;
+    margin: 8px auto;
 }
 .eLocationAddressFlex {
     grid-column: 1 / 2;
@@ -18,4 +19,7 @@
     line-height: 16px;
     white-space: pre-line;
     color: rgb(92, 92, 92);
+    &:hover{
+        color: black;
+    }
 }
