--- a/src/client/style.scss
+++ b/src/client/style.scss
@@ -36,6 +36,9 @@ body {
 .colorNickname{
 	color: rgb(59, 126, 194);
 }
+.colorNickname_2{
+	color: rgba(0, 0, 0, 0.7);
+}
 .colorTime{
 	color: rgb(92, 92, 92);
 }
