--- a/src/client/styleGlobal.scss
+++ b/src/client/styleGlobal.scss
@@ -32,13 +32,25 @@ body {
 }
 
 
-
-.colorNickname{
+.colorNikcName{
+	color: rgb(65, 65, 65);
+}
+.colorNicknameHover{
 	color: rgb(59, 126, 194);
 }
 .colorNickname_2{
 	color: rgba(0, 0, 0, 0.7);
 }
-.colorTime{
-	color: rgb(92, 92, 92);
+.colorTimeSpan{
+	color: rgb(184, 183, 183);
+}
+
+
+@mixin displayFlex(){
+    display: flex;
+    display: -webkit-flex;
+}
+
+.boxShadow{
+	
 }
