--- a/src/client/pages/SearchPage/style.scss
+++ b/src/client/pages/SearchPage/style.scss
@@ -440,7 +440,7 @@
         width: 95%;
         min-width: 320px;
         max-width: 1130px;
-        height: 400px;
+        height: auto;
         border-radius: 8px;
         background-color: rgb(255, 255, 255);
         border: 1px solid #ddd;
@@ -475,14 +475,13 @@
         }
     }
     .sSuggestionsLayoutSuggestionBoxMain{
-        height: 330px;
+        height: auto;
         width: 100%;
         border-radius: 0 0 8px 8px;
         white-space: nowrap;
         overflow-x: scroll;
         overflow-y: hidden;
         text-align: center;
-        padding: 0 10px;
         &::-webkit-scrollbar {
             display: none;
         }
@@ -491,8 +490,8 @@
     .sSuggestionsLayoutSuggestionBoxMainFlex{
         display: inline-flex;
         width: auto;
-        height: 100%;
-        margin: 0 10px;
+        height: auto;
+        margin: 0 5px;
     }
     .sSuggestionsLayoutSuggestionBoxMainShowAll{
         height: 100%;
@@ -509,7 +508,7 @@
         width: auto;
         min-width: 320px;
         max-width: 1130px;
-        height: 460px;
+        height: auto;
         white-space: nowrap;
         overflow-x: scroll;
         overflow-y: hidden;
@@ -661,7 +660,6 @@
     }
     .sSuggestionsLayoutSuggestionBox{
         margin: 40px auto 0 auto;
-        height: 450px;
     }
     .sSuggestionsLayoutSuggestionBoxHeader{
         padding: 0 10px 0 20px;
@@ -672,9 +670,6 @@
                 width: 320px;
             }
         }
-    }
-    .sSuggestionsLayoutSuggestionBoxMain{
-        height: 380px;
     }
     .sSuggestionsLayoutSuggestionBoxMainShowAll{
         margin: -50px 10px ;
