--- a/src/client/styleGlobal.scss
+++ b/src/client/styleGlobal.scss
@@ -5,7 +5,7 @@ html {
 	overflow-y: scroll;
 	overflow-x: hidden;
 	font-family: -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
-	letter-spacing: normal !important;
+	letter-spacing: normal;
 	scroll-behavior: smooth;
 	-webkit-overflow-scrolling: touch;
 	margin: 0;
